--- a/src/components/pages/servicos/Servicos.css
+++ b/src/components/pages/servicos/Servicos.css
@@ -16,7 +16,6 @@
 	display: flex;
 	align-content: center;
 	justify-content: space-around;
-	font-size: 13px;
 }
 
 .Servicos a:link,
@@ -24,22 +23,20 @@
 .Servicos a:focus,
 .Servicos a:hover,
 .Servicos a:active {
-	font-size: 13px;
 	color: black;
 	text-decoration: none;
 }
 
-.Servicos a.selected:link,
-.Servicos a.selected:visited,
-.Servicos a.selected:focus,
-.Servicos a.selected:hover,
-.Servicos a.selected:active {
+.Servicos li.selected a:link,
+.Servicos li.selected a:visited,
+.Servicos li.selected a:focus,
+.Servicos li.selected a:hover,
+.Servicos li.selected a:active {
 	font-style: italic;
 	color: rgb(76, 115, 170);
 }
 
 .Servicos article {
-	font-size: 13px;
 	padding: 20px;
 }
 
@@ -47,12 +44,7 @@
 	font-weight: normal;
 	font-style: italic;
 	text-align: center;
-	font-size: 13px;
 	padding-bottom: 15px;
-}
-
-.Servicos article p {
-	font-size: 13px;
 }
 
 .Servicos article .listas {
@@ -70,12 +62,7 @@
 	margin: 5px;
 }
 
-.Servicos article ul.small li {
-	font-size: 12px;
-}
-
 .Servicos article ul li.title {
 	font-weight: bold;
-	font-size: 14px;
 	padding-bottom: 10px;
 }
