--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,21 +1,33 @@
 .Header {
 	background-color: #15618f;
+	width: 100%;
 	height: 190px;
 	padding: 20px;
-	color: white;
+	color: rgba(255, 255, 255, 0.9);
 	display: flex;
-	align-items: flex-start;
+	align-items: center;
 	justify-content: space-between;
-	min-width: 650px;
 	overflow: hidden;
 }
 
 .Header .logo {
-	background: #15618f url('./logo.png');
-	min-width: 440px;
-	width: 440px;
+	background: #15618f url('./logo-cropped.png') no-repeat;
+	width: 157px;
 	height: 155px;
-	margin: 0 auto;
+}
+
+.Header .title {
+	font-family: 'Libre Baskerville', serif;
+}
+
+.Header .title h1 {
+	font-size: 25px;
+	margin-bottom: 10px;
+}
+
+.Header .title h3 {
+	font-size: 18px;
+	font-weight: normal;
 }
 
 .Header > .left-boxes, .Header > .right-boxes {
@@ -74,4 +86,24 @@
 
 .rotate-neg-15deg {
 	transform: rotate(-15deg);
+}
+
+@media screen and (max-width: 600px) {
+	.Header {
+		height: 58px;
+		position: fixed;
+		top: 0;
+	}
+	
+	.Header .logo,
+	.Header > .left-boxes,
+	.Header > .right-boxes,
+	.Header .title h3 {
+		display: none;
+	}
+
+	.Header .title h1 {
+		margin: 0;
+		line-height: 1.5;
+	}
 }
