--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -8,16 +8,16 @@
 	width: 100%;
 	height: 289px;
 	background: white url('./fundobanner.png') no-repeat;
+	background-size: cover;
 	display: flex;
 	align-content: center;
 	justify-content: space-around;
 	flex-direction: column;
 }
 
-.Home .banner h3 {
+.Home .banner h1 {
 	padding: 10px 20px;
 	background-color: rgba(240,240,240,0.5);
-	font-size: 35px;
 	font-style: italic;
 	font-weight: 600;
 	margin: 0 auto;
@@ -56,7 +56,6 @@
 	background-color: #2b1075;
 	color: white;
 	padding: 5px 10px;
-	font-size: 13px;
 	border-radius: 6px;
 	margin-top: 5px;
 }
