--- a/src/index.css
+++ b/src/index.css
@@ -1,20 +1,31 @@
-* {
-  box-sizing: border-box;
-}
-
 html {
   overflow-y: scroll;
 }
 
-body {
+body, html {
   margin: 0;
   padding: 0;
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
-	font-size: 14px;
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+  font-size: 16px;
+  line-height: 1.2;
+  color: #424242;
+}
+
+h1, h2, h3, h4, h5 {
+  margin: 0; 
+}
+
+header, nav, footer, section, article, div, ul, li {
+  box-sizing: border-box;
 }
 
 h3 {
-  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: 20px;
 }
 
 .firstLetterPadding p::first-letter {
