--- a/src/components/pages/contato/Contato.css
+++ b/src/components/pages/contato/Contato.css
@@ -1,29 +1,14 @@
-.Contato {
-	display: flex;
-	align-content: flex-start;
-	justify-content: space-between;
-	flex-flow: row wrap;
-}
-
 .Contato .mapa {
-	width: 100%;
-	margin: 0;
-	flex: 1 300px;
+	position: relative;
+	padding-bottom: 75%;
+	height: 0;
+	overflow: hidden;
 }
 
 .Contato .mapa iframe {
-	margin: 0;
-	padding: 0;
-}
-
-.Contato .content {
-	width: 100%;
-	margin: 0;
-	flex: 1 300px;
-}
-
-.Contato .content p {
-	margin: 0;
-	padding: 7px 20px;
-	line-height: 1.7;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100% !important;
+	height: 100% !important;
 }
