--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -93,6 +93,7 @@
 		height: 58px;
 		position: fixed;
 		top: 0;
+		z-index: 5;
 	}
 	
 	.Header .logo,
@@ -104,6 +105,7 @@
 
 	.Header .title h1 {
 		margin: 0;
+		margin-left: 48px;
 		line-height: 1.5;
 	}
 }
