--- a/src/components/pages/sobreNos/SobreNos.css
+++ b/src/components/pages/sobreNos/SobreNos.css
@@ -1,19 +1,15 @@
 .SobreNos {
 	display: flex;
-	flex-flow: row wrap;
 	align-content: flex-start;
 	justify-content: space-between;
-	padding: 20px;
+	padding: 1rem;
 }
 
 .SobreNos .banner {
-	flex: 1 350px;
-	border-radius: 30px;
+	border-radius: 1rem;
 	border: 1px solid white;
-	width: 100%;
-	min-width: 350px;
-	max-width: 482px;
-	max-height: 640px;
+	width: 50%;
+	height: 100%;
 	overflow: hidden;
 }
 
@@ -25,8 +21,32 @@
 }
 
 .SobreNos .content {
-	width: 100%;
-	flex: 1 350px;
-	min-width: 350px;
-	padding: 0 20px;
+	width: 50%;
+	padding: 0 1rem;
+}
+
+@media screen and (max-width: 500px) {
+	.SobreNos {
+		flex-direction: column;
+	}
+
+	.SobreNos .banner {
+		width: 100%;
+		height: 180px;
+	}
+
+	.SobreNos .banner figure {
+		position: relative;
+		right: -50%;
+	}
+
+	.SobreNos .banner figure img {
+		position: relative;
+		left: -50%;
+	}
+
+	.SobreNos .content {
+		width: 100%;
+		margin-top: 1rem;
+	}
 }
