--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -109,3 +109,14 @@
 		line-height: 1.5;
 	}
 }
+
+@media screen and (min-width: 601px) and (max-width: 700px) {
+  .Header {
+    justify-content: space-around;
+  }
+
+	.Header > .left-boxes,
+	.Header > .right-boxes {
+		display: none;
+	}
+}
