--- a/src/components/pages/home/Home.css
+++ b/src/components/pages/home/Home.css
@@ -37,7 +37,7 @@
 	padding: 0 20px;
 	display: flex;
 	align-content: center;
-	justify-content: space-around;
+	justify-content: space-between;
 	flex-flow: row wrap;
 }
 
