Fix the layout to be at maximum, 2 columns

--- a/src/components/pages/produtos/Produtos.css
+++ b/src/components/pages/produtos/Produtos.css
@@ -4,6 +4,7 @@
 
 .Produtos section {
 	display: flex;
+	padding: 1rem;
 	align-content: center;
 	justify-content: space-around;
 	flex-direction: row;
