--- a/src/components/pages/produtos/Produtos.css
+++ b/src/components/pages/produtos/Produtos.css
@@ -27,7 +27,8 @@
 	align-content: flex-start;
 	justify-content: space-around;
 	flex-direction: row;
-  flex-wrap: wrap;
+	flex-wrap: wrap;
+	padding: 1rem;
 }
 
 .Produto .content p {
